gatewaymanifestfiles/deployment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
    type: backend
spec:
  selector:
    matchLabels:
      app: gateway
      type: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gateway
        type: backend
    spec:
      imagePullSecrets:
       - name: regcred
      containers:
        - name: gateway
          image: brims15/gateway:0.0.1-SNAPSHOT
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "2"
              #---------------------------------#
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
          imagePullPolicy: Always
