gatewaymanifestfiles/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gateway
spec:
  selector:
    app: gateway
    type: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888 
      name: http-gateway
